--- a/index.html
+++ b/index.html
@@ -3,143 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SecureTalk | Global Fix</title>
-    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+    <title>SwiftCall | P2P Manual</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        .video-mirror { transform: scaleX(-1); }
-        #video-grid video { background: #000; border-radius: 1rem; object-fit: cover; width: 100%; height: 100%; min-height: 200px; }
+        .video-bg { background: #0f172a; height: 100dvh; width: 100vw; }
+        video { object-fit: cover; width: 100%; height: 100%; }
+        #local-video { 
+            width: 120px; height: 180px; position: absolute; 
+            top: 20px; right: 20px; border-radius: 1rem; 
+            border: 2px solid rgba(255,255,255,0.2); z-index: 10;
+        }
     </style>
 </head>
-<body class="bg-slate-950 text-slate-100 font-sans overflow-hidden">
+<body class="bg-slate-950 text-white font-sans overflow-hidden">
 
-    <div id="login" class="flex flex-col items-center justify-center h-screen p-4">
-        <div class="bg-slate-900 p-8 rounded-3xl shadow-2xl border border-slate-800 w-full max-w-md text-center">
-            <h1 class="text-3xl font-black mb-6 bg-gradient-to-r from-blue-400 to-emerald-400 bg-clip-text text-transparent">SecureTalk</h1>
-            <input type="text" id="roomCode" placeholder="CÓDIGO DE SALA" 
-                class="w-full p-4 rounded-xl bg-slate-950 border border-slate-700 mb-4 focus:border-blue-500 outline-none text-center font-mono uppercase">
-            <button onclick="startApp()" class="w-full bg-blue-600 py-4 rounded-xl font-bold text-lg shadow-lg">Entrar</button>
+    <div id="setup-screen" class="fixed inset-0 z-50 flex items-center justify-center bg-slate-900/95 backdrop-blur-md">
+        <div class="bg-slate-800 p-8 rounded-3xl shadow-2xl w-full max-w-md border border-slate-700">
+            <h1 class="text-3xl font-bold text-center mb-2">SwiftCall</h1>
+            <p class="text-slate-400 text-center mb-8 text-sm">Sin servidores. Sin registros. P2P Puro.</p>
+            
+            <div class="space-y-6">
+                <div>
+                    <label class="block text-xs font-bold uppercase text-slate-500 mb-2">Tu ID para recibir llamadas:</label>
+                    <div class="flex gap-2">
+                        <input type="text" id="my-id" readonly class="w-full bg-slate-900 p-3 rounded-xl text-blue-400 font-mono text-sm border border-slate-700">
+                        <button onclick="copyID()" class="bg-slate-700 px-4 rounded-xl hover:bg-slate-600 transition"><i class="fas fa-copy"></i></button>
+                    </div>
+                </div>
+
+                <div class="relative">
+                    <div class="absolute inset-0 flex items-center"><span class="w-full border-t border-slate-700"></span></div>
+                    <div class="relative flex justify-center text-xs uppercase"><span class="bg-slate-800 px-2 text-slate-500 font-bold">Llamar a alguien</span></div>
+                </div>
+
+                <div>
+                    <input type="text" id="peer-id-input" placeholder="Pega el ID de tu amigo aquí..." class="w-full bg-slate-900 p-4 rounded-xl text-white border border-slate-700 focus:ring-2 focus:ring-blue-500 outline-none">
+                </div>
+
+                <button id="call-btn" class="w-full bg-blue-600 hover:bg-blue-500 py-4 rounded-2xl font-bold text-lg shadow-lg shadow-blue-900/20 transition-all transform active:scale-95">
+                    Iniciar Videollamada
+                </button>
+            </div>
         </div>
     </div>
 
-    <div id="room" class="hidden h-screen flex flex-col">
-        <header class="p-4 bg-slate-900 border-b border-slate-800 flex justify-between items-center">
-            <span class="text-xs font-mono">SALA: <b id="displayCode"></b></span>
-            <button onclick="copyInvite()" class="bg-slate-800 px-3 py-1 rounded text-[10px]">Copiando Link...</button>
-        </header>
+    <main class="video-bg relative">
+        <video id="remote-video" autoplay playsinline class="bg-slate-900"></video>
+        <video id="local-video" autoplay playsinline muted></video>
 
-        <main class="flex-1 flex flex-col md:flex-row overflow-hidden">
-            <div id="video-grid" class="flex-1 p-4 grid grid-cols-1 sm:grid-cols-2 gap-4 bg-slate-950 overflow-y-auto">
-                <div class="relative rounded-2xl overflow-hidden border border-slate-800 h-64 md:h-full">
-                    <video id="localVideo" autoplay muted playsinline class="video-mirror"></video>
-                </div>
-            </div>
-            <div id="chat" class="w-full md:w-80 bg-slate-900 border-l border-slate-800 flex flex-col h-1/3 md:h-auto">
-                <div id="messages" class="flex-1 p-4 overflow-y-auto space-y-2 text-sm"></div>
-                <form onsubmit="event.preventDefault(); sendMessage();" class="p-4 bg-slate-950 flex gap-2">
-                    <input type="text" id="chatInput" placeholder="Mensaje..." class="flex-1 bg-slate-900 p-2 rounded border border-slate-800 outline-none">
-                    <button class="bg-blue-600 px-3 rounded">➤</button>
-                </form>
-            </div>
-        </main>
-    </div>
+        <div class="fixed bottom-10 left-1/2 -translate-x-1/2 flex gap-4 bg-slate-900/80 p-5 rounded-full backdrop-blur-xl border border-white/10 shadow-2xl">
+            <button onclick="toggleMic()" id="mic-btn" class="w-14 h-14 rounded-full bg-slate-800 hover:bg-slate-700 transition"><i class="fas fa-microphone"></i></button>
+            <button onclick="toggleVideo()" id="video-btn" class="w-14 h-14 rounded-full bg-slate-800 hover:bg-slate-700 transition"><i class="fas fa-video"></i></button>
+            <button onclick="shareScreen()" class="w-14 h-14 rounded-full bg-slate-800 hover:bg-slate-700 transition"><i class="fas fa-desktop"></i></button>
+            <button onclick="location.reload()" class="w-14 h-14 rounded-full bg-red-500 hover:bg-red-400 transition text-white"><i class="fas fa-phone-slash"></i></button>
+        </div>
+    </main>
 
     <script>
-        let peer, localStream, roomCode, currentConn;
+        let peer = new Peer(); 
+        let localStream;
 
-        // Servidores de Google para que la conexión salte el 4G/5G (STUN Servers)
-        const peerConfig = {
-            config: {
-                'iceServers': [
-                    { url: 'stun:stun.l.google.com:19302' },
-                    { url: 'stun:stun1.l.google.com:19302' },
-                    { url: 'stun:stun2.l.google.com:19302' }
-                ]
-            }
-        };
+        // Al abrir, generar ID y pedir cámara
+        peer.on('open', id => {
+            document.getElementById('my-id').value = id;
+            startLocalVideo();
+        });
 
-        window.onload = () => {
-            const params = new URLSearchParams(window.location.search);
-            if(params.get('room')) document.getElementById('roomCode').value = params.get('room');
-        };
-
-        async function startApp() {
-            roomCode = document.getElementById('roomCode').value.trim().toLowerCase();
-            if(!roomCode) return alert("Escribe un código");
-
-            document.getElementById('login').classList.add('hidden');
-            document.getElementById('room').classList.remove('hidden');
-            document.getElementById('displayCode').innerText = roomCode;
-
+        async function startLocalVideo() {
             try {
-                localStream = await navigator.mediaDevices.getUserMedia({video: true, audio: true});
-                document.getElementById('localVideo').srcObject = localStream;
-            } catch(e) { alert("Error cámara. Asegúrate de usar HTTPS"); }
+                localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+                document.getElementById('local-video').srcObject = localStream;
+            } catch (err) {
+                console.error("No se pudo acceder a la cámara", err);
+                alert("Necesitas cámara y micro para funcionar.");
+            }
+        }
 
-            // Intentamos ser el Anfitrión (ID fijo)
-            peer = new Peer('st-' + roomCode, peerConfig);
-
-            peer.on('open', () => {
-                console.log("Anfitrión listo");
-                peer.on('call', call => {
-                    call.answer(localStream);
-                    call.on('stream', s => renderVideo(s, call.peer));
-                });
-                peer.on('connection', c => setupChat(c));
+        // ESCUCHAR LLAMADA ENTRANTE
+        peer.on('call', call => {
+            document.getElementById('setup-screen').classList.add('hidden');
+            call.answer(localStream);
+            call.on('stream', remoteStream => {
+                document.getElementById('remote-video').srcObject = remoteStream;
             });
+        });
 
-            peer.on('error', (err) => {
-                if(err.type === 'unavailable-id') {
-                    // Ya hay anfitrión, somos invitados (ID aleatorio)
-                    peer = new Peer(null, peerConfig);
-                    peer.on('open', () => {
-                        const call = peer.call('st-' + roomCode, localStream);
-                        call.on('stream', s => renderVideo(s, 'st-' + roomCode));
-                        setupChat(peer.connect('st-' + roomCode));
-                    });
-                }
+        // REALIZAR LLAMADA
+        document.getElementById('call-btn').addEventListener('click', () => {
+            const peerId = document.getElementById('peer-id-input').value;
+            if (!peerId) return alert("Pega un ID válido");
+
+            const call = peer.call(peerId, localStream);
+            document.getElementById('setup-screen').classList.add('hidden');
+            
+            call.on('stream', remoteStream => {
+                document.getElementById('remote-video').srcObject = remoteStream;
             });
+        });
+
+        // UTILIDADES
+        function copyID() {
+            const idInput = document.getElementById('my-id');
+            idInput.select();
+            document.execCommand('copy');
+            alert("ID Copiado. Envíalo a tu amigo.");
         }
 
-        function setupChat(conn) {
-            currentConn = conn;
-            conn.on('data', data => {
-                const bytes = CryptoJS.AES.decrypt(data, roomCode);
-                addMsg(bytes.toString(CryptoJS.enc.Utf8), 'Otro', 'text-emerald-400');
-            });
+        function toggleMic() {
+            const audioTrack = localStream.getAudioTracks()[0];
+            audioTrack.enabled = !audioTrack.enabled;
+            document.getElementById('mic-btn').classList.toggle('bg-red-500');
         }
 
-        function renderVideo(stream, id) {
-            if(document.getElementById(id)) return;
-            const div = document.createElement('div');
-            div.id = id;
-            div.className = "relative rounded-2xl overflow-hidden border border-blue-500 h-64 md:h-full";
-            div.innerHTML = `<video autoplay playsinline></video>`;
-            div.querySelector('video').srcObject = stream;
-            document.getElementById('video-grid').append(div);
+        function toggleVideo() {
+            const videoTrack = localStream.getVideoTracks()[0];
+            videoTrack.enabled = !videoTrack.enabled;
+            document.getElementById('video-btn').classList.toggle('bg-red-500');
         }
 
-        function sendMessage() {
-            const val = document.getElementById('chatInput').value;
-            if(!val || !currentConn) return;
-            currentConn.send(CryptoJS.AES.encrypt(val, roomCode).toString());
-            addMsg(val, 'Tú', 'text-blue-400');
-            document.getElementById('chatInput').value = '';
-        }
-
-        function addMsg(t, u, c) {
-            const m = document.getElementById('messages');
-            const d = document.createElement('div');
-            d.innerHTML = `<b class="${c}">${u}:</b> ${t}`;
-            m.appendChild(d);
-            m.scrollTop = m.scrollHeight;
-        }
-
-        function copyInvite() {
-            const url = `${window.location.origin}${window.location.pathname}?room=${roomCode}`;
-            navigator.clipboard.writeText(url);
-            alert("Link copiado. Envíalo por WhatsApp.");
+        async function shareScreen() {
+            try {
+                const screenStream = await navigator.mediaDevices.getDisplayMedia({ video: true });
+                // Aquí se debería actualizar el sender del WebRTC (v2)
+                alert("Compartir pantalla activado (Maqueta)");
+            } catch (err) {
+                console.error(err);
+            }
         }
     </script>
 </body>
